fixed accordion menu behind navbar and resized background and placement for media queries.

--- a/style/background.css
+++ b/style/background.css
@@ -12,7 +12,7 @@
     background-repeat: no-repeat;
     width: 90%;
     height: 58vh;
-    margin-top: 50px;
+    margin-top: 90px;
 }
 
 .background_desktop {
@@ -36,7 +36,8 @@
         justify-content: center;
     }
     .background_desktop img {
-        margin-top: 50px;
+        margin-top: 80px;
+        margin-bottom: 10px;
         width: 31vw;
         margin-left: 10px;
         margin-right: 10px;
